--- a/WeekFlex/app/src/main/res/layout/activity_login.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_login.xml
@@ -7,16 +7,16 @@
     tools:context=".Activity.LoginActivity">
 
 
-    <ImageView
+    <com.google.android.gms.common.SignInButton
         android:id="@+id/login_google"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/google"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/login_kakao"
         />
+
     <ImageView
         android:id="@+id/login_kakao"
         android:layout_width="50dp"
