--- a/WeekFlex/app/src/main/res/layout/routine_item_content.xml
+++ b/WeekFlex/app/src/main/res/layout/routine_item_content.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="8dp">
     <TextView
         android:id="@+id/routineList_item_addRoutine"
@@ -12,6 +12,8 @@
         android:text="루틴이름"
         android:textSize="25dp"
         android:textColor="@color/black"
-        android:gravity="center"/>
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
