--- a/WeekFlex/app/src/main/res/layout/activity_add_todo.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_add_todo.xml
@@ -6,4 +6,196 @@
     android:layout_height="match_parent"
     tools:context=".Activity.AddTodoActivity">
 
+    <EditText
+        android:id="@+id/insertTodoName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="할 일을 적어주세요."
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:imeOptions="actionDone"
+        android:inputType="text"/>
+
+    <LinearLayout
+        android:id="@+id/category"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/insertTodoName"
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
+        android:layout_marginTop="25dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="카테고리"
+            android:layout_gravity="center"
+            android:textColor="#000000"/>
+
+        <LinearLayout
+            android:id="@+id/chooseCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="210dp"
+                app:cardCornerRadius="100dp">
+                <ImageView
+                    android:id="@+id/categoryColor"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/btn_categoryChoose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" 추가해"
+                android:background="#ffffff"
+                android:layout_marginLeft="7dp"/>
+
+
+
+        </LinearLayout>
+
+
+
+
+
+
+    </LinearLayout>
+
+
+
+    <TextView
+        android:id="@+id/days"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="요일"
+        android:textColor="#000000"
+        app:layout_constraintTop_toBottomOf="@+id/category"
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
+        android:layout_marginTop="25dp"/>
+
+    <LinearLayout
+        android:id="@+id/selectDays"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/days"
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/monButton"
+            android:background="@drawable/button_color"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"/>
+        <Button
+            android:id="@+id/tueButton"
+            android:background="@drawable/button_color"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"/>
+        <Button
+            android:id="@+id/wedButton"
+            android:background="@drawable/button_color"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"/>
+        <Button
+            android:id="@+id/thuButton"
+            android:background="@drawable/button_color"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"/>
+        <Button
+            android:id="@+id/friButton"
+            android:background="@drawable/button_color"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"/>
+        <Button
+            android:id="@+id/satButton"
+            android:background="@drawable/button_color"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"/>
+        <Button
+            android:id="@+id/sunButton"
+            android:background="@drawable/button_color"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
+    </LinearLayout>
+
+
+
+    <Switch
+        android:id="@+id/timeSettingSwitch"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:switchMinWidth="60dp"
+        android:switchPadding="245dp"
+        app:layout_constraintTop_toBottomOf="@+id/selectDays"
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
+        android:text="시간 설정"
+        android:layout_marginTop="25dp"/>
+
+    <LinearLayout
+        android:id="@+id/startTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/timeSettingSwitch"
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="시작"
+            android:textColor="#000000"
+            android:layout_marginTop="10dp"/>
+        <EditText
+            android:id="@+id/selectStartTime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="250dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/endTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/startTime"
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="종료"
+            android:textColor="#000000"
+            android:layout_marginTop="10dp"/>
+        <EditText
+            android:id="@+id/selectEndTime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="250dp"/>
+    </LinearLayout>
+
+    <TimePicker
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/endTime"
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
+        android:timePickerMode="spinner"
+        android:layout_marginTop="20dp"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
