--- a/WeekFlex/app/src/main/res/layout/activity_add_category.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_add_category.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -16,32 +16,37 @@
             android:id="@+id/cancel_add_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="X"
+            android:layout_margin="5dp"
             android:background="#ffffff"
-            android:layout_margin="5dp"/>
+            android:text="X"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="카테고리"
-            android:textSize="18dp"
-            android:textColor="#000000"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="73dp"/>
+            android:layout_marginLeft="84dp"
+            android:layout_marginTop="12dp"
+            android:text="카테고리"
+            android:textColor="#000000"
+            android:textSize="18dp"
+            app:layout_constraintLeft_toRightOf="@+id/save_add_category"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/save_add_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="저장"
             android:background="#ffffff"
-            android:layout_marginLeft="85dp"
-            android:layout_marginTop="5dp"/>
+            android:text="저장"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <EditText
         android:id="@+id/insertCategory"
@@ -67,9 +72,9 @@
         android:layout_marginTop="60dp"
         android:layout_marginLeft="4dp"/>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/selectColors1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/allColors"
         app:layout_constraintLeft_toLeftOf="@+id/allColors"
@@ -77,8 +82,10 @@
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/red"
-            android:layout_marginRight="35dp"
+            android:id="@+id/btn_red"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="35dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="#FB4F55"
@@ -91,8 +98,10 @@
 
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/yellow"
-            android:layout_marginRight="35dp"
+            android:id="@+id/btn_yellow"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/btn_red"
+            android:layout_marginLeft="35dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             app:cardCornerRadius="20dp">
@@ -103,8 +112,10 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/blue"
-            android:layout_marginRight="35dp"
+            android:id="@+id/btn_blue"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/btn_yellow"
+            android:layout_marginLeft="35dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             app:cardCornerRadius="20dp">
@@ -115,8 +126,10 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/purple"
-            android:layout_marginRight="35dp"
+            android:id="@+id/btn_violet"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/btn_blue"
+            android:layout_marginLeft="35dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             app:cardCornerRadius="20dp">
@@ -127,8 +140,10 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/violet"
-            android:layout_marginRight="35dp"
+            android:id="@+id/btn_purple"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/btn_violet"
+            android:layout_marginLeft="35dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
             app:cardCornerRadius="20dp">
@@ -139,79 +154,10 @@
         </androidx.cardview.widget.CardView>
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/selectColors2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/selectColors1"
-        app:layout_constraintLeft_toLeftOf="@+id/selectColors1"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/green"
-            android:layout_marginRight="35dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:cardCornerRadius="20dp">
-            <ImageView
-                android:background="#20D004"
-                android:layout_width="40dp"
-                android:layout_height="40dp"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/orange"
-            android:layout_marginRight="35dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:cardCornerRadius="20dp">
-            <ImageView
-                android:background="#FD8B34"
-                android:layout_width="40dp"
-                android:layout_height="40dp"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/lightpurple"
-            android:layout_marginRight="35dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:cardCornerRadius="20dp">
-            <ImageView
-                android:background="#7B91FE"
-                android:layout_width="40dp"
-                android:layout_height="40dp"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/emerald"
-            android:layout_marginRight="35dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:cardCornerRadius="20dp">
-            <ImageView
-                android:background="#23ACA0"
-                android:layout_width="40dp"
-                android:layout_height="40dp"/>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/pink"
-            android:layout_marginRight="35dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:cardCornerRadius="20dp">
-            <ImageView
-                android:background="#FD6D71"
-                android:layout_width="40dp"
-                android:layout_height="40dp"/>
-        </androidx.cardview.widget.CardView>
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
