--- a/WeekFlex/app/src/main/res/layout/activity_add_todo.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_add_todo.xml
@@ -18,7 +18,7 @@
         android:imeOptions="actionDone"
         android:inputType="text"/>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/category"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -28,24 +28,32 @@
         android:layout_marginTop="25dp">
 
         <TextView
+            android:id="@+id/tvCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/category"
             android:text="카테고리"
-            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
             android:textColor="#000000"/>
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/chooseCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/tvCategory"
+            android:layout_marginLeft="220dp"
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="210dp"
-                app:cardCornerRadius="100dp">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="@+id/chooseCategory"
+                android:layout_marginTop="15dp"
+                app:cardCornerRadius="10dp">
                 <ImageView
                     android:id="@+id/categoryColor"
                     android:layout_width="20dp"
@@ -57,20 +65,22 @@
                 android:id="@+id/btn_categoryChoose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="@+id/chooseCategory"
                 android:text=" 추가해"
                 android:background="#ffffff"
                 android:layout_marginLeft="7dp"/>
 
 
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
 
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
@@ -84,9 +94,9 @@
         app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
         android:layout_marginTop="25dp"/>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/selectDays"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/days"
         app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
@@ -94,47 +104,69 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/monButton"
-            android:background="@drawable/button_color"
+            android:id="@+id/btn_mon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="10dp"/>
-        <Button
-            android:id="@+id/tueButton"
             android:background="@drawable/button_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="29dp"/>
+
+        <Button
+            android:id="@+id/btn_tue"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="10dp"/>
-        <Button
-            android:id="@+id/wedButton"
             android:background="@drawable/button_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btn_mon"
+            android:layout_marginLeft="12dp"/>
+
+        <Button
+            android:id="@+id/btn_wed"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="10dp"/>
-        <Button
-            android:id="@+id/thuButton"
             android:background="@drawable/button_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btn_tue"
+            android:layout_marginLeft="12dp"/>
+
+        <Button
+            android:id="@+id/btn_thu"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="10dp"/>
-        <Button
-            android:id="@+id/friButton"
             android:background="@drawable/button_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btn_wed"
+            android:layout_marginLeft="12dp"/>
+
+        <Button
+            android:id="@+id/btn_fri"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="10dp"/>
-        <Button
-            android:id="@+id/satButton"
             android:background="@drawable/button_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btn_thu"
+            android:layout_marginLeft="12dp"/>
+
+        <Button
+            android:id="@+id/btn_sat"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="10dp"/>
-        <Button
-            android:id="@+id/sunButton"
             android:background="@drawable/button_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btn_fri"
+            android:layout_marginLeft="12dp"/>
+
+        <Button
+            android:id="@+id/btn_sun"
             android:layout_width="40dp"
-            android:layout_height="40dp"/>
-    </LinearLayout>
+            android:layout_height="40dp"
+            android:background="@drawable/button_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/btn_sat"
+            android:layout_marginLeft="12dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
@@ -149,45 +181,51 @@
         android:text="시간 설정"
         android:layout_marginTop="25dp"/>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/startTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/timeSettingSwitch"
-        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
-        android:orientation="horizontal">
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/startTime"
+            app:layout_constraintTop_toTopOf="@+id/startTime"
             android:text="시작"
             android:textColor="#000000"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="15dp"/>
         <EditText
             android:id="@+id/selectStartTime"
+            app:layout_constraintStart_toStartOf="@+id/startTime"
+            app:layout_constraintTop_toTopOf="@+id/startTime"
+            android:layout_marginLeft="280dp"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="250dp"/>
-    </LinearLayout>
+            android:layout_height="wrap_content" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/endTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/startTime"
-        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName"
-        android:orientation="horizontal">
+        app:layout_constraintLeft_toLeftOf="@+id/insertTodoName">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/endTime"
+            app:layout_constraintTop_toTopOf="@+id/endTime"
             android:text="종료"
             android:textColor="#000000"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="15dp"/>
         <EditText
             android:id="@+id/selectEndTime"
+            app:layout_constraintStart_toStartOf="@+id/endTime"
+            app:layout_constraintTop_toTopOf="@+id/endTime"
+            android:layout_marginLeft="280dp"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="250dp"/>
-    </LinearLayout>
+            android:layout_height="wrap_content"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TimePicker
         android:layout_width="match_parent"
