--- a/WeekFlex/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/WeekFlex/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment.BottomSheetFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,6 +17,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="bottomCategory"
+            app:layout_constraintTop_toTopOf="bottomCategory"
             android:text="카테고리"
             android:textSize="18dp"
             android:textColor="#000000"
@@ -27,15 +29,18 @@
             android:id="@+id/addCategory"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="#ffffff"
             android:text="+"
             android:textSize="18dp"
-            android:layout_marginLeft="220dp"
-            android:layout_gravity="center"
-            android:background="#ffffff"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/categoryList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -45,7 +50,7 @@
 
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
