--- a/WeekFlex/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/WeekFlex/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -17,8 +17,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="bottomCategory"
-            app:layout_constraintTop_toTopOf="bottomCategory"
+            app:layout_constraintLeft_toLeftOf="@+id/bottomCategory"
+            app:layout_constraintTop_toTopOf="@+id/bottomCategory"
             android:text="카테고리"
             android:textSize="18dp"
             android:textColor="#000000"
