--- a/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
+++ b/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
@@ -1,103 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header_todo"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/gray"
+        android:layout_height="0dp"
+        android:background="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/body_todo"
         android:orientation="vertical">
         <TextView
             android:id="@+id/dateToday_todo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2월 6일, 토요일"
-            android:textSize="25dp"
             android:textStyle="bold"
+            android:textSize="24sp"
+            android:textColor="@color/white"
+            android:letterSpacing="-0.01"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="30dp"/>
-<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="50dp"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintLeft_toLeftOf="parent"-->
-<!--            app:layout_constraintRight_toRightOf="parent"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            android:orientation="horizontal">-->
-<!--            <androidx.recyclerview.widget.RecyclerView-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintLeft_toLeftOf="parent"-->
-<!--                app:layout_constraintRight_toRightOf="parent"-->
-<!--                android:id="@+id/weekHeader_recylerview"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:nestedScrollingEnabled="false"-->
-<!--                android:orientation="horizontal" />-->
-<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="80dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/header_todo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:orientation="horizontal">
+
         <androidx.recyclerview.widget.RecyclerView
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/header_todo"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginBottom="32dp"
+            android:layout_marginLeft="21dp"
+            android:layout_marginRight="21dp"
+            android:clipToPadding="false"
             android:id="@+id/weekHeader_recylerview"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:nestedScrollingEnabled="false"
             android:orientation="horizontal" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/body_todo"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="243dp"
+        android:background="@drawable/round_edge_view_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="0dp">
+
         <TextView
-            android:id="@+id/addTodoMent_todo"
-            android:layout_width="wrap_content"
+            android:id="@+id/todays_flex_todo"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/header_todo"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="236dp"
+            android:letterSpacing="-0.01"
+            android:text="Today's Flex"
+            android:textColor="@color/gray"
+            android:textSize="18sp"
+            android:textStyle="normal"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:text="아래 + 버튼을 눌러\n목표를 추가하세요"
-            android:textSize="30dp"
-            android:textColor="@color/gray"
+            app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/addTodoImg_todo"
+            android:layout_width="132dp"
+            android:layout_height="132dp"
+            android:src="@drawable/sadgraycharacter"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="121dp"
+            android:layout_marginRight="107dp"
+            android:layout_marginTop="106dp"
             android:visibility="visible"/>
+        <TextView
+            android:id="@+id/addTodoMent_todo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="93dp"
+            android:layout_marginRight="93dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center_horizontal"
+            android:letterSpacing="-0.01"
+            android:text="오늘의 목표를 추가해주세요"
+            android:textColor="@color/gray_2"
+            android:textSize="16sp"
+            android:textStyle="normal"
+            android:visibility="visible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/addTodoImg_todo" />
+
         <Button
             android:id="@+id/addBtn_todo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:text="+"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/black_circle_btn"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"/>
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/plusbutton"
+            app:layout_constraintLeft_toLeftOf="@id/addBtn_todo"
+            app:layout_constraintRight_toRightOf="@id/addBtn_todo"
+            app:layout_constraintTop_toTopOf="@id/addBtn_todo"
+            app:layout_constraintBottom_toBottomOf="@id/addBtn_todo"
+            android:elevation="10dp"/>
+
         <Button
             android:id="@+id/addTodoBtn_todo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="할 일 추가하기"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/addBtn_todo"
-            app:layout_constraintRight_toRightOf="@id/addBtn_todo"
-            android:visibility="gone"/>
+            app:layout_constraintRight_toRightOf="@id/addBtn_todo" />
+
         <Button
             android:id="@+id/addRoutineBtn_todo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="루틴 추가하기"
+            android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@id/addTodoBtn_todo"
-            app:layout_constraintRight_toRightOf="@id/addBtn_todo"
-            android:visibility="gone"/>
+            app:layout_constraintRight_toRightOf="@id/addBtn_todo" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
