--- a/WeekFlex/app/src/main/res/layout/todo_week_date_view.xml
+++ b/WeekFlex/app/src/main/res/layout/todo_week_date_view.xml
@@ -1,31 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="43dp"
-    android:layout_height="45dp"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#D1ADAD"
-    android:layout_marginRight="5dp"
-    android:layout_marginLeft="5dp"
+    android:background="@color/black"
     >
-    <TextView
-        android:id="@+id/dateDay_todo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="7"
-        android:textStyle="bold"
-        android:textSize="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
     <TextView
         android:id="@+id/dateweekDay_todo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="일"
-        android:textStyle="bold"
-        android:textSize="13dp"
-        app:layout_constraintTop_toBottomOf="@id/dateDay_todo"
+        android:textStyle="normal"
+        android:textSize="10sp"
+        android:textColor="@color/gray_3"
+        android:letterSpacing="-0.01"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+    <ImageView
+        android:id="@+id/routine_star_img_todo"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:src="@drawable/yellowstar"
+        app:layout_constraintTop_toBottomOf="@+id/dateweekDay_todo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+    <TextView
+        android:id="@+id/dateDay_todo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="7"
+        android:textStyle="normal"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        android:letterSpacing="-0.01"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toBottomOf="@id/routine_star_img_todo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+    <View
+        android:id="@+id/underline_today_todo"
+        android:layout_width="14dp"
+        android:layout_height="2dp"
+        app:layout_constraintTop_toBottomOf="@id/dateDay_todo"
+        android:background="@color/white"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="invisible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
