--- a/WeekFlex/app/src/main/res/values/colors.xml
+++ b/WeekFlex/app/src/main/res/values/colors.xml
@@ -3,9 +3,14 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="gray">#C1BFBF</color>
+    <color name="mainActLine">#e5e5e5</color>
+    <color name="gray">#333333</color>
+    <color name="gray_2">#cccccc</color>
+    <color name="gray_3">#a4a4a9</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="yellowBorder">#f9eb88</color>
+    <color name="mintBorder">#6ec9c4</color>
 
     <string-array name="colors">
         <item>#FB4F55</item>
