--- a/WeekFlex/app/src/main/res/drawable/routine_list_rectangle.xml
+++ b/WeekFlex/app/src/main/res/drawable/routine_list_rectangle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#CAABAB" />
-    <corners android:radius="32dp" />
-
+    <solid android:color="@color/white" />
+    <stroke android:width="2dp"
+        android:color="@color/black"/>
 </shape>
