--- a/WeekFlex/app/src/main/res/layout/activity_insert_routine_name.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_insert_routine_name.xml
@@ -7,23 +7,64 @@
     tools:context=".Activity.InsertRoutineNameActivity">
     <Button
         android:id="@+id/back_insertRoutineName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="뒤로가기"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:background="@drawable/goback"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="49dp"/>
+    <TextView
+        android:id="@+id/addRoutineName_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/back_insertRoutineName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="루틴 추가하기"
+        android:textSize="18sp"
+        android:textColor="@color/black"
+        android:letterSpacing="-0.01"
+        android:gravity="center_horizontal"/>
+    <ImageView
+        android:id="@+id/checkImg_insertRoutineName"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        app:layout_constraintTop_toTopOf="@id/back_insertRoutineName"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/uncheck"
+        android:layout_marginRight="16dp"/>
+    <TextView
+        android:id="@+id/addRoutineName_ment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/back_insertRoutineName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="104dp"
+        android:layout_marginLeft="25dp"
+        android:text="루틴 이름을 입력해주세요"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:letterSpacing="-0.01"/>
+
     <EditText
         android:id="@+id/insertRoutineName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="루틴 이름을 입력해주세요"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="250dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
+        android:hint="ex. English Master"
+        android:textStyle="bold"
+        android:textSize="28sp"
+        android:textColor="@color/black"
+        android:letterSpacing="-0.01"
+        android:background="@null"
+        app:layout_constraintTop_toBottomOf="@id/addRoutineName_ment"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
         android:imeOptions="actionDone"
-        android:inputType="text"/>
+        android:inputType="text">
+        <requestFocus/>
+    </EditText>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
