feat: apply all fonts

--- a/WeekFlex/app/src/main/res/layout/routine_item_content.xml
+++ b/WeekFlex/app/src/main/res/layout/routine_item_content.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Design Master"
+        android:fontFamily="@font/maaxbold"
         android:textStyle="bold"
         android:textSize="20sp"
         android:textColor="@color/white"
@@ -34,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12개의 할 일"
+        android:fontFamily="@font/applesdgothicneo"
         android:textStyle="normal"
         android:textSize="13sp"
         android:textColor="@color/gray_2"
