--- a/WeekFlex/app/src/main/res/layout/todo_week_date_view.xml
+++ b/WeekFlex/app/src/main/res/layout/todo_week_date_view.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="일"
+        android:fontFamily="@font/applesdgothicneo"
         android:textStyle="normal"
         android:textSize="10sp"
         android:textColor="@color/gray_3"
@@ -33,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="7"
+        android:fontFamily="@font/maaxmedium"
         android:textStyle="normal"
         android:textSize="12sp"
         android:textColor="@color/white"
