--- a/WeekFlex/app/src/main/res/layout/activity_add_routine.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_add_routine.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="나의 루틴"
+        android:fontFamily="@font/applesdgothicneo"
         android:textStyle="bold"
         android:textSize="24sp"
         android:textColor="@color/black"
@@ -32,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="루틴 카드로 쉽게 할 일을 추가하세요"
+        android:fontFamily="@font/applesdgothicneo"
         android:textStyle="normal"
         android:textSize="16sp"
         android:textColor="@color/gray"
@@ -57,6 +59,8 @@
         android:layout_width="0dp"
         android:layout_height="90dp"
         android:text="New Routine"
+        android:fontFamily="@font/maax"
+        android:textStyle="bold"
         android:background="@drawable/routine_list_rectangle"
         app:layout_constraintTop_toBottomOf="@id/recyclerview_addRoutine"
         app:layout_constraintLeft_toLeftOf="parent"
