--- a/WeekFlex/app/src/main/res/layout/activity_main.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
+    <View
+        android:elevation="10dp"
+        android:id="@+id/navigationOpacity"
+        android:layout_width="match_parent"
+        android:layout_height="62dp"
+        android:background="@color/black"
+        android:visibility="invisible"
+        android:alpha="0.5"
+        app:layout_constraintBottom_toBottomOf="@id/navigationBar"
+        app:layout_constraintLeft_toLeftOf="@id/navigationBar"/>
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/fragmentViewMain"
         android:layout_width="match_parent"
