--- a/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
+++ b/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2월 6일, 토요일"
+            android:fontFamily="@font/maaxbold"
             android:textStyle="bold"
             android:textSize="24sp"
             android:textColor="@color/white"
@@ -57,21 +58,7 @@
         app:layout_constraintVertical_bias="1.0"
         tools:layout_editor_absoluteX="0dp">
 
-        <TextView
-            android:id="@+id/todays_flex_todo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginRight="236dp"
-            android:letterSpacing="-0.01"
-            android:text="Today's Flex"
-            android:textColor="@color/gray"
-            android:textSize="18sp"
-            android:textStyle="normal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/addTodoImg_todo"
             android:layout_width="132dp"
@@ -94,6 +81,7 @@
             android:gravity="center_horizontal"
             android:letterSpacing="-0.01"
             android:text="오늘의 목표를 추가해주세요"
+            android:fontFamily="@font/applesdgothicneo"
             android:textColor="@color/gray_2"
             android:textSize="16sp"
             android:textStyle="normal"
@@ -102,65 +90,6 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/addTodoImg_todo" />
 
-<!--        <Button-->
-<!--            android:id="@+id/addBtn_todo"-->
-<!--            android:layout_width="60dp"-->
-<!--            android:layout_height="60dp"-->
-<!--            android:layout_marginRight="24dp"-->
-<!--            android:layout_marginBottom="32dp"-->
-<!--            android:background="@drawable/black_circle_btn"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintRight_toRightOf="parent" />-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/addBtnImg_todo"-->
-<!--            android:layout_width="32dp"-->
-<!--            android:layout_height="32dp"-->
-<!--            android:src="@drawable/plusbutton"-->
-<!--            app:layout_constraintLeft_toLeftOf="@id/addBtn_todo"-->
-<!--            app:layout_constraintRight_toRightOf="@id/addBtn_todo"-->
-<!--            app:layout_constraintTop_toTopOf="@id/addBtn_todo"-->
-<!--            app:layout_constraintBottom_toBottomOf="@id/addBtn_todo"-->
-<!--            android:elevation="10dp"/>-->
-<!--        <Button-->
-<!--            android:id="@+id/addTodoBtn_todo"-->
-<!--            android:layout_width="60dp"-->
-<!--            android:layout_height="60dp"-->
-<!--            android:layout_marginBottom="12dp"-->
-<!--            android:background="@drawable/black_addtodo_btn"-->
-<!--            android:visibility="visible"-->
-<!--            app:layout_constraintBottom_toTopOf="@id/addBtn_todo"-->
-<!--            app:layout_constraintRight_toRightOf="@id/addBtn_todo" />-->
-<!--        <ImageView-->
-<!--            android:id="@+id/addTodoBtnImg_todo"-->
-<!--            android:layout_width="32dp"-->
-<!--            android:layout_height="32dp"-->
-<!--            android:src="@drawable/plusbutton"-->
-<!--            app:layout_constraintLeft_toLeftOf="@id/addTodoBtn_todo"-->
-<!--            app:layout_constraintRight_toRightOf="@id/addTodoBtn_todo"-->
-<!--            app:layout_constraintTop_toTopOf="@id/addTodoBtn_todo"-->
-<!--            app:layout_constraintBottom_toBottomOf="@id/addTodoBtn_todo"-->
-<!--            android:elevation="10dp"/>-->
-
-<!--        <Button-->
-<!--            android:id="@+id/addRoutineBtn_todo"-->
-<!--            android:layout_width="60dp"-->
-<!--            android:layout_height="60dp"-->
-<!--            android:background="@drawable/black_getroutine_btn"-->
-<!--            android:visibility="visible"-->
-<!--            android:layout_marginBottom="12dp"-->
-<!--            app:layout_constraintBottom_toTopOf="@id/addTodoBtn_todo"-->
-<!--            app:layout_constraintRight_toRightOf="@id/addBtn_todo" />-->
-<!--        <ImageView-->
-<!--            android:id="@+id/addRoutineBtnImg_todo"-->
-<!--            android:layout_width="32dp"-->
-<!--            android:layout_height="32dp"-->
-<!--            android:src="@drawable/getroutinebutton"-->
-<!--            app:layout_constraintLeft_toLeftOf="@id/addRoutineBtn_todo"-->
-<!--            app:layout_constraintRight_toRightOf="@id/addRoutineBtn_todo"-->
-<!--            app:layout_constraintTop_toTopOf="@id/addRoutineBtn_todo"-->
-<!--            app:layout_constraintBottom_toBottomOf="@id/addRoutineBtn_todo"-->
-<!--            android:elevation="10dp"/>-->
     </androidx.constraintlayout.widget.ConstraintLayout>
     <View
         android:id="@+id/blackOpacityView_todo"
@@ -220,8 +149,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="할 일 추가하기"
+            android:fontFamily="@font/applesdgothicneo"
             android:textColor="@color/white"
             android:textSize="18dp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@id/addTodoBtn_todo"
@@ -259,8 +190,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="루틴 가져오기"
+            android:fontFamily="@font/applesdgothicneo"
             android:textColor="@color/white"
             android:textSize="18dp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@id/addRoutineBtn_todo"
