#25 Android Swipe Layout 적용 후 스와이프 후 버튼 클릭하면 로그 출력

--- a/WeekFlex/app/src/main/res/layout/todo_routine_home_view.xml
+++ b/WeekFlex/app/src/main/res/layout/todo_routine_home_view.xml
@@ -1,37 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/todo_routine_home_view_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/common_google_signin_btn_text_light_normal">
+    android:layout_weight="1"
+    app:dragEdge="right"
+    app:mode="same_level">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/todo_routine_home_view_itemRecyclerView"
+    <FrameLayout
+        android:layout_width="200dp"
+        android:layout_height="match_parent">
+
+        <ImageButton
+            android:id="@+id/todo_routine_home_view_routineDeleteButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?android:attr/listDivider"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:srcCompat="?attr/selectableItemBackgroundBorderless" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/icon_40_delete_white" />
+    </FrameLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="16dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
+        android:translationZ="1px"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/todo_routine_home_view_title"
-        tools:itemCount="3"
-        tools:listitem="@layout/todo_routine_home_view_item" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/todo_routine_home_view_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/maaxbold"
-        android:text="English Master :-)"
-        android:textAlignment="viewStart"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/todo_routine_home_view_itemRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/todo_routine_home_view_title"
+            tools:itemCount="3"
+            tools:listitem="@layout/todo_routine_home_view_item" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/todo_routine_home_view_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/maaxbold"
+            android:text="English Master :-)"
+            android:textAlignment="viewStart"
+            android:textColor="@color/colorAccent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/common_google_signin_btn_text_light_normal_background"
+        android:backgroundTint="#ff6868"
+        android:translationZ="-2px" >
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.chauthai.swipereveallayout.SwipeRevealLayout>
