#24 category list & task list 기본 더미 띄움

--- a/WeekFlex/app/src/main/res/values/colors.xml
+++ b/WeekFlex/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="gray_3">#a4a4a9</color>
     <color name="gray_4">#666666</color>
     <color name="black">#000000</color>
+    <color name="task_gray">#f5f5f5</color>
     <color name="white">#ffffff</color>
     <color name="yellowBorder">#f9eb88</color>
     <color name="mintBorder">#6ec9c4</color>
