--- a/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
@@ -98,6 +98,7 @@
             android:layout_marginRight="2dp"
             android:visibility="invisible"/>
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/categoryList_completeRoutine"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -107,7 +108,7 @@
             app:layout_constraintRight_toRightOf="parent">
             <ImageView
                 android:id="@+id/completeRoutine_categoryheader_emptybookmark"
-                android:layout_width="16dp"
+                android:layout_width="12dp"
                 android:layout_height="16dp"
                 android:src="@drawable/bookmark_empty"
                 app:layout_constraintTop_toTopOf="parent"
@@ -125,6 +126,17 @@
                 android:layout_marginLeft="16dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/taskList_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toBottomOf="@id/completeRoutine_categoryheader"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
     <Button
         android:id="@+id/addBtn_work_completeRoutine"
         android:layout_width="60dp"
