--- a/WeekFlex/app/src/main/res/layout/category_list_item_view.xml
+++ b/WeekFlex/app/src/main/res/layout/category_list_item_view.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginRight="24dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/categoryList_itemView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -13,8 +16,8 @@
             android:layout_width="12dp"
             android:layout_height="12dp"
             android:src="@drawable/bluestar"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@id/category_name_categoryList"
+            app:layout_constraintBottom_toBottomOf="@id/category_name_categoryList"
             app:layout_constraintLeft_toLeftOf="parent"/>
         <TextView
             android:id="@+id/category_name_categoryList"
@@ -24,18 +27,17 @@
             android:textSize="14sp"
             app:layout_constraintLeft_toRightOf="@id/category_starimg_categoryList"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginLeft="4dp"
             android:textColor="@color/gray_4"/>
-        <View
-            android:id="@+id/category_underline_categoryList"
-            android:layout_width="0dp"
-            android:layout_height="3dp"
-            android:background="@color/colorAccent"
-            app:layout_constraintTop_toBottomOf="@id/category_name_categoryList"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:visibility="invisible"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/category_underline_categoryList"
+        android:layout_width="0dp"
+        android:layout_height="3dp"
+        android:background="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@id/categoryList_itemView"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="invisible"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
