--- a/WeekFlex/app/src/main/res/layout/task_list_item_view.xml
+++ b/WeekFlex/app/src/main/res/layout/task_list_item_view.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="9dp"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
