#24 arraylist 다 list 로 refactor & 검색기능 구현

--- a/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
@@ -89,6 +89,8 @@
             android:hint="원하는 할 일을 찾을 수 있어요"
             android:textSize="14sp"
             android:paddingLeft="32dp"
+            android:imeOptions="actionDone"
+            android:inputType="text"
             android:paddingBottom="15dp"
             />
         <ImageView
