#24 마이너한 오류 수정

--- a/WeekFlex/app/src/main/res/layout/activity_insert_routine_name.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_insert_routine_name.xml
@@ -64,6 +64,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:imeOptions="actionDone"
+        android:maxLength="22"
         android:inputType="text">
         <requestFocus/>
     </EditText>
