--- a/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
@@ -75,7 +75,8 @@
         android:layout_width="match_parent"
         android:layout_height="102dp"
         app:layout_constraintTop_toBottomOf="@id/makeRoutine_topheader"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:focusableInTouchMode="true">
         <EditText
             android:id="@+id/search_completeRoutine"
             android:layout_width="0dp"
@@ -126,7 +127,7 @@
             app:layout_constraintRight_toRightOf="parent">
             <ImageView
                 android:id="@+id/completeRoutine_categoryheader_emptybookmark"
-                android:layout_width="12dp"
+                android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:src="@drawable/bookmark_empty"
                 app:layout_constraintTop_toTopOf="parent"
