#28 자잘한 오류 해결 & 루틴 목록에 테스크 수 반영

--- a/WeekFlex/app/src/main/res/layout/activity_routine_final_check.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_routine_final_check.xml
@@ -42,7 +42,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/taskList_routineFinalCheck"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/routineMent_routineFinalCheck"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -51,6 +51,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         app:layout_constraintVertical_bias="0"
+        android:scrollbars="vertical"
         />
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/bottomBtns_routineFinalCheck"
