#28 내 루틴 목록 스와이프 삭제 완료

--- a/WeekFlex/app/src/main/res/values/colors.xml
+++ b/WeekFlex/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="mintBorder">#6ec9c4</color>
     <color name="modifyPink">#ff9999</color>
     <color name="color1">#ff6868</color>
+    <color name="color6">#684ffc</color>
 
 
     <string-array name="colors">
