#35 카테고리 관리 뷰 완성

--- a/WeekFlex/app/src/main/res/layout/all_category_list_item.xml
+++ b/WeekFlex/app/src/main/res/layout/all_category_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/all_category_one_item_container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -22,5 +23,14 @@
         android:textColor="@color/colorAccent"
         app:layout_constraintLeft_toRightOf="@id/all_category_category_image"
         app:layout_constraintTop_toTopOf="parent"/>
+    <ImageView
+        android:id="@+id/all_category_more_btn"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:src="@drawable/more"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
