--- a/WeekFlex/app/src/main/res/values/colors.xml
+++ b/WeekFlex/app/src/main/res/values/colors.xml
@@ -29,7 +29,7 @@
     <color name="color9">#8f72e1</color>
     <color name="color10">#8da6ff</color>
     <color name="color11">#2ab5f1</color>
-    <color name="color12">#2ab5f1</color>
+    <color name="color12">#6ec9c4</color>
     <color name="color13">#22b9b0</color>
     <color name="color14">#684ffc</color>
     <color name="color15">#4d51f6</color>
