--- a/WeekFlex/app/src/main/res/layout/all_category_color_list_layout.xml
+++ b/WeekFlex/app/src/main/res/layout/all_category_color_list_layout.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="match_parent"
     style="@style/DialogAnimation"
     android:orientation="vertical"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
@@ -95,7 +95,6 @@
         android:layout_height="1dp"
         android:background="@color/gray_1"
         app:layout_constraintTop_toBottomOf="@id/all_category_available_colors"
-        android:layout_marginTop="23.5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="16dp"
@@ -122,14 +121,9 @@
         android:textSize="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/all_category_not_available_colors"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="32dp"
         />
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
